@@ -1,14 +1,10 @@
 .\" Automatically generated by Pandoc 2.10.1
 .\"
-.TH "CTWILL" "1" "June 14, 2020" "Web2c @VERSION@" "General Commands Manual"
+.TH "CTWILL" "1" "September 23, 2020" "Web2c @VERSION@" "General Commands Manual"
 .hy
 .SH NAME
 .PP
-ctwill, ctwill-refsort, ctwill-twinx \[en] translate CWEB to TeX
-.PD 0
-.P
-.PD
-with mini-indexes per spread or per section
+ctwill, ctwill-refsort, ctwill-twinx - translate CWEB to TeX with mini-indexes
 .SH SYNOPSIS
 .PP
 \f[B]ctwill\f[R] [\f[I]options\f[R]] \f[I]webfile\f[R][.w]
