@@ -1,10 +1,10 @@
 .\" Automatically generated by Pandoc 2.10.1
 .\"
-.TH "CWEB" "1" "June 08, 2020" "Web2c @VERSION@" "General Commands Manual"
+.TH "CWEB" "1" "September 23, 2020" "Web2c @VERSION@" "General Commands Manual"
 .hy
 .SH NAME
 .PP
-ctangle, cweave \[en] translate CWEB to C/C++ and/or TeX
+ctangle, cweave - translate CWEB to C/C++ and/or TeX
 .SH SYNOPSIS
 .PP
 \f[B]ctangle\f[R] [\f[I]options\f[R]] \f[I]webfile\f[R][.w]
