@@ -1,3 +1,8 @@
+2020-09-23  Andreas Scherer  <https://ascherer.github.io>
+
+	* ctwill.man,
+	* cweb.man: Make manpages compatible with 'whatis'.
+
 2020-06-14  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctwill.man: Mention new macros 'pdfctwimac.tex'.
